--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -486,7 +486,7 @@ section .box:nth-child(6){background: #fff;height: 600px;}
   padding: 13px;
   font-size: 14px;
   font-weight: 500;
-  background-color: #333146;
+  background-color: #231d63;
   box-shadow: 0 14px 26px -12px rgba(70, 77, 144, 0.42),
   0 4px 23px 0px rgba(0, 0, 0, 0.12),
   0 8px 10px -5px rgba(8, 55, 255, 0.2);
@@ -497,9 +497,12 @@ section .box:nth-child(6){background: #fff;height: 600px;}
   background-image: linear-gradient(to right, rgb(50, 51, 102) , rgb(101, 67, 111));
   color: #fff;
   transform: translate3d(0, -3px, 0);
-  box-shadow: 0 14px 26px -12px rgba(28, 68, 125, 0.42),
+  /* box-shadow: 0 14px 26px -12px rgba(28, 68, 125, 0.42),
   0 4px 23px 0px rgba(0, 0, 0, 0.12),
-  0 8px 10px -5px rgba(98, 95, 99, 0.6);
+  0 8px 10px -5px rgba(98, 95, 99, 0.6); */
+  box-shadow: 0 14px 16px -11px rgba(19, 33, 80, 0.42),
+  0 12px 14px 2px rgba(0, 0, 0, 0.12),
+  0 8px 10px -5px rgba(28, 59, 117, 0.2)
 }
 
 
