--- a/AreumJeon/css/isotope.css
+++ b/AreumJeon/css/isotope.css
@@ -69,7 +69,7 @@
   bottom: 0;
   width: 0;
   height: 32px;
-  background: #2a283a;
+  background: #f3f377;
   opacity: .3;
 }
 .nav-pills>li>a:hover::after{width: 100%;left: 0;}
