--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -6,7 +6,9 @@ header{
   background-color: #252334;
   padding: 10px 0;
   height: 85px;
-  z-index: -1;}
+  display: none !important;
+  opacity: 0 !important;
+}
 header.fixed{
   position: fixed;
   top: 0;
@@ -17,8 +19,8 @@ header.fixed{
   width: 100%;
   height: 85px;
   line-height: 62px;
-  /* display: block; */
-  /* opacity: 1; */
+  display: block !important;
+  opacity: 1 !important;
 }
 header .container{
   position: relative;
@@ -613,6 +615,13 @@ footer small{
 /* section */
 section .box{margin-top: 0;}
 section .box:nth-child(6){margin-top: -100px;height: 550px;}
+
+.container > h2 a{position: relative;display: inline-block;flex: 1;
+  background: #f3f377;color: #000;
+  /* background-image: linear-gradient(to right, #f3f377 0, #f3f377 100%); */
+  background-size: 0 100%;background-repeat: no-repeat;
+  background-position: 0 0.1em;}
+
 
 /* slide */
   body > section{margin-top: -56px;}
