--- a/sidmool/css/sidmool.css
+++ b/sidmool/css/sidmool.css
@@ -1,14 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Dosis|Noto+Sans+KR');
 
-body{font-family: 'Dosis', sans-serif;
-/* font-family: 'Noto Sans KR', sans-serif; */
-}
-
-/* intro */
-.intro{background: url(../images/coffee.jpg) no-repeat center; background-size: cover;}
-.intro h1{position: absolute; top:50%; left:50%; transform: translate(-50%, -50%);}
-.intro small{position: absolute; bottom:30px; left:50%; transform: translateX(-50%);width: 250px;text-align: center; color:#fff; font-size: 12px;}
+body{font-family: 'Dosis', sans-serif;}
 
 /* header */
 header .center{height: 200px; z-index: 2;}
@@ -630,11 +623,3 @@ line-height: 50px; font-size: 24px;}
   .sns-event .event .icon-left-open{margin-left: 0; left:20px;}
   .sns-event .event .event-slide [class*=swiper-button]{transform: translateY(-50%); left:initial;}
 }
-
-
-
-
-
-
-
-/*  */
