--- a/sidmool/css/sidmool.css
+++ b/sidmool/css/sidmool.css
@@ -451,7 +451,7 @@ line-height: 50px; font-size: 24px;}
   }
 
   /* 영문,한글 */
-  header nav .gnb-nav > li > a span{background: none; padding-left: 10px;color: #000;}
+  header nav .gnb-nav > li > a span{background: none; padding-left: 10px;}
   header nav .gnb-nav > li > a span.ko{text-align: left;background:#efefef;}
 
   /* 2depth */
