--- a/sidmool/css/sidmool.css
+++ b/sidmool/css/sidmool.css
@@ -406,8 +406,8 @@ line-height: 50px; font-size: 24px;}
   /* 로그인 */
   header #btn-login{top:12px;right: 0;padding-right: 35px;font-size: 25px;}
   header #btn-login .pc{display: none;}
-  header .logout-form{display: block; position: static; color:#000; line-height: 50px;}
-  header .logout-form b{color:#000; padding-left: 10px;}
+  header .logout-form{display: block; position: static; color:#fff; line-height: 50px;}
+  header .logout-form b{color:#fff; padding-left: 10px;}
   header .icon-logout{font-size: 25px; position: absolute; right: 0;padding-right: 35px;
     top:13px; color:#fff;}
 
@@ -421,7 +421,7 @@ line-height: 50px; font-size: 24px;}
 
   /* 네비게이션 */
   header nav{position: fixed; top:0; left:-60%; width:60%; height: 100%;
-    background: #fff; transition: left 0.5s;
+    background: #000; transition: left 0.5s;
   }
   /* 네비게이션 활성화시 그림자 */
   header.on nav{box-shadow: 0 0 10px 5px rgba(0,0,0,0.2); left:0;}
@@ -434,11 +434,11 @@ line-height: 50px; font-size: 24px;}
 
   /* 1depth */
   header nav .gnb-nav{
-    position: absolute; left: 0; top: 158px;bottom: 0; transform: none; width: 100%;
+    position: absolute; left: 0; top: 130px;bottom: 0; transform: none; width: 100%;
     overflow-x: hidden; overflow-y: auto;
   }
   header nav .gnb-nav > li{float: none; border-bottom:1px solid #777;}
-  header nav .gnb-nav > li > a{font-size: 14px; margin: 0; color:#000; text-align: left;}
+  header nav .gnb-nav > li > a{font-size: 14px; margin: 0; color:#fff; text-align: left;}
 
   /* 빨간 밑줄=>위아래 아이콘으로 변경(스크립트로 처리하지 않을시) */
   header nav .gnb-nav > li > a::after{
@@ -452,17 +452,17 @@ line-height: 50px; font-size: 24px;}
 
   /* 영문,한글 */
   header nav .gnb-nav > li > a span{background: none; padding-left: 10px;}
-  header nav .gnb-nav > li > a span.ko{text-align: left; color:#000; background:#efefef;}
+  header nav .gnb-nav > li > a span.ko{text-align: left; color:#fff; background:#656161;}
 
   /* 2depth */
   header nav .gnb-nav li ul{position: static; text-align: left; height: auto; padding: 0 0 0 25px;
-  line-height: 40px; box-sizing: border-box;background: #efefef;}
-  header nav .gnb-nav li ul li a{font-size: 14px; line-height: 40px; display: block;
-    color: #000;}
+  line-height: 40px; box-sizing: border-box;}
+  header nav .gnb-nav li ul li a{font-size: 14px; line-height: 40px; display: block;}
   header nav .gnb-nav li ul li a.active,
   header nav .gnb-nav li ul li a:hover{text-decoration: none;}
   header nav .gnb-nav li ul li a::before{content: '-'; padding-right: 5px;}
-  section{margin-top: 50px;}
+
+
   /* 메인슬라이드 */
   .main-slide .slide > ul > li{height: 300px;background-size: cover;background-position: 0% 0;}
   .main-slide .slide > ul > li img{display: none;}
